fix overflow in menu, remove socket messenger container

--- a/client/src/styles/game.scss
+++ b/client/src/styles/game.scss
@@ -95,7 +95,7 @@
             box-shadow: 10px 10px 3px #0000008f;
             display: flex;
             flex-direction: column;
-            overflow: visible;
+            overflow: hidden;
             width: fit-content;
             width: -moz-fit-content;
         }
